added feature1-accent2 colour to palatte

--- a/test/fixture/tone-news.html
+++ b/test/fixture/tone-news.html
@@ -132,7 +132,7 @@ s4fonts
                 <p>
                     The president gave answers running to hundreds of words on topics ranging from the government’s role in wealth redistribution to his policies in the Middle East to political polarization in the US to the state of today’s media.
                 </p>
-                <aside class="element element-rich-link tone-comment">
+                <aside class="element element-rich-link tone-feature">
 	                <img class="rich-image" src="http://i.guim.co.uk/img/media/6d665d9634e05f4235b1c414007fbc36184c1c2d/5_156_2741_1645/master/2741.jpg?w=700&q=85&auto=format&sharp=10&s=a0614833d2aa14ec8a959e325ad6f9c0">
 	                <p>
 		            	<span>Related: </span>
