Added support for bylines

--- a/test/fixture/tone-news.html
+++ b/test/fixture/tone-news.html
@@ -132,13 +132,19 @@ s4fonts
                 <p>
                     The president gave answers running to hundreds of words on topics ranging from the government’s role in wealth redistribution to his policies in the Middle East to political polarization in the US to the state of today’s media.
                 </p>
-                <aside class="element element-rich-link tone-feature">
-	                <img class="rich-image" src="http://i.guim.co.uk/img/media/6d665d9634e05f4235b1c414007fbc36184c1c2d/5_156_2741_1645/master/2741.jpg?w=700&q=85&auto=format&sharp=10&s=a0614833d2aa14ec8a959e325ad6f9c0">
-	                <p>
-		            	<span>Related: </span>
-		            	</span>
-						<a href="x-gu://item/mobile-apps.guardianapis.com/items/world/2015/apr/07/islamic-state-isis-crimes-against-culture-iraq-syria">Who should I vote for in the Labour leadership election?</a>
-	                </p>
+                <aside class="element element-rich-link tone-media has-quote has-byline">
+	                <div class="rich-link-content">
+		                <div class="rich-link-image"><img class="rich-image" src="http://i.guim.co.uk/img/media/6d665d9634e05f4235b1c414007fbc36184c1c2d/5_156_2741_1645/master/2741.jpg?w=700&q=85&auto=format&sharp=10&s=a0614833d2aa14ec8a959e325ad6f9c0"></div>
+		                <div class="rich-link-title">
+			                <p>
+				                <a href="x-gu://item/mobile-apps.guardianapis.com/items/world/2015/apr/07/islamic-state-isis-crimes-against-culture-iraq-syria">Who should I vote for in the Labour leadership election?
+					            </a>
+		                	</p>
+		                </div>
+		                <div class="rich-link-byline">
+			                <p>Simon Jenkins</p>
+		                </div>
+	                </div>    
                 </aside>
                 <p>
                     Some of his remarks, imparted to interviewers who have been largely supportive of his presidency, seemed likely to raise the eyebrows of skeptics – as when he claimed to be the most productive president in 50 years.
