--- a/test/fixture/tone-news.html
+++ b/test/fixture/tone-news.html
@@ -132,9 +132,9 @@ s4fonts
                 <p>
                     The president gave answers running to hundreds of words on topics ranging from the government’s role in wealth redistribution to his policies in the Middle East to political polarization in the US to the state of today’s media.
                 </p>
-                <aside class="element element-rich-link tone-live has-quote has-byline">
+                <aside class="element element-rich-link tone-comment has-quote has-byline">
 	                <div class="rich-link-content">
-		                <div class="rich-link-image"><img class="rich-image" src="http://i.guim.co.uk/img/media/6d665d9634e05f4235b1c414007fbc36184c1c2d/5_156_2741_1645/master/2741.jpg?w=700&q=85&auto=format&sharp=10&s=a0614833d2aa14ec8a959e325ad6f9c0"></div>
+		                <div class="rich-link-image"><img class="rich-image" src="http://i.guim.co.uk/img/media/484acabce4de9240878731207debc42b2b1ca36e/0_0_5164_3100/master/5164.jpg?w=700&q=85&auto=format&sharp=10&s=e53fcc9d21841ee3f3da709d08520f59"></div>
 		                <div class="rich-link-title">
 			                <div class="live-ticker"><div class="bullet"></div>Live</div>
 			                <p>
