--- a/ArticleTemplates/audioTemplate.html
+++ b/ArticleTemplates/audioTemplate.html
@@ -53,10 +53,13 @@
                 </a>
 
                 <div class="audio-player__slider">
-                    <input type="text" class="audio-player__slider__played" id="audio-scrubber" disabled/>
-                    <input type="text" class="audio-player__slider__remaining" id="audio-scrubber-left" disabled/>
-                    <div class="audio-player__slider__track"></div>
-                    <div class="audio-player__slider__knob" role="slider" id="audio-slider-knob"></div>
+                    <input type="text" class="audio-player__played" id="audio-scrubber" disabled/>
+                    <input type="text" class="audio-player__remaining" id="audio-scrubber-left" disabled/>
+                   <!--  <div class="audio-player__slider__track"></div>
+                    <div class="audio-player__slider__knob" role="slider" id="audio-slider-knob"></div> -->
+                    <div class="audio-player__slider-wrapper">
+                    
+                    <div id="audio-player-range-slider"></div></div>
                 </div>
             </div>
         </div>
