--- a/ArticleTemplates/outbrainTemplate.html
+++ b/ArticleTemplates/outbrainTemplate.html
@@ -1,6 +1,9 @@
 <div class="container container__outbrain" id="outbrain">
-	<div class="OUTBRAIN outbrainImage" data-widget-id="<%=widgetCode%>" data-src="__ARTICLE_WEB_URI__" data-ob-template="guardian" data-ob-user-id="__ADVERTISING_ID__"></div>
-	<div class="OUTBRAIN outbrainText" data-widget-id="<%=widgetCode%>" data-src="__ARTICLE_WEB_URI__" data-ob-template="guardian" data-ob-user-id="__ADVERTISING_ID__"></div>
+    <a class="advert-slot__action" href="x-gu://subscribe/outbrain">
+        Hide <span data-icon="&#xe04F;"></span>
+    </a>
+    <div class="OUTBRAIN outbrainImage" data-widget-id="<%=widgetCode%>" data-src="__ARTICLE_WEB_URI__" data-ob-template="guardian" data-ob-user-id="__ADVERTISING_ID__"></div>
+    <div class="OUTBRAIN outbrainText" data-widget-id="<%=widgetCode%>" data-src="__ARTICLE_WEB_URI__" data-ob-template="guardian" data-ob-user-id="__ADVERTISING_ID__"></div>
 </div>
 <!--- Pulling this in here after the outbrain styles so we can override them -->
 <link rel="stylesheet" type="text/css" media="all" href="__TEMPLATES_DIRECTORY__assets/css/outbrain.css" />
