DES-15: Add z-index to outbrain hide link

--- a/test/fixture/tone-news.html
+++ b/test/fixture/tone-news.html
@@ -225,6 +225,9 @@
             </div>
         </section>
         <div class="container container__outbrain" id="outbrain" style="display: block;">
+            <a class="advert-slot__action" href="x-gu://subscribe/outbrain">
+                Hide <span data-icon="&#xe04F;"></span>
+            </a>
     <div id="ob_holder" style="display: none;"><iframe id="ob_iframe" src="http://widgets.outbrain.com/nanoWidget/3rd/comScore/comScore.htm#pid=1142" style="display: none; width: 1px; height: 1px;"></iframe><script type="text/javascript" src="http://log.outbrain.com/loggerServices/widgetGlobalEvent?tm=1271&amp;pid=1142&amp;sid=5055354&amp;wId=176&amp;wRV=01000203&amp;rId=abb7b86fb2db9706d9f41c3ecaabec37&amp;eT=0&amp;idx=0&amp;pvId=abb7b86fb2db9706d9f41c3ecaabec37&amp;org=0&amp;pad=4&amp;pVis=1&amp;eIdx=&amp;ab=0&amp;wl=0" charset="UTF-8" async=""></script><script type="text/javascript" src="http://log.outbrain.com/loggerServices/widgetGlobalEvent?tm=1801&amp;pid=1142&amp;sid=5055354&amp;wId=176&amp;wRV=01000203&amp;rId=abb7b86fb2db9706d9f41c3ecaabec37&amp;eT=3&amp;idx=0&amp;pvId=abb7b86fb2db9706d9f41c3ecaabec37&amp;org=0&amp;pad=4&amp;pVis=1&amp;eIdx=0&amp;ab=0&amp;wl=0" charset="UTF-8" async=""></script></div><div class="OUTBRAIN outbrainImage" data-widget-id="AR_17" data-src="http://www.theguardian.com//uk-news/2015/nov/18/kayleigh-haywood-hunt-schoolgirl-murder-inquiry-police" data-ob-template="guardian" data-ob-user-id="a5ed27f5-822c-4f58-902a-207e34586164" data-ob-mark="true" data-browser="chrome" data-os="linux aarch64" data-dynload="" id="outbrain_widget_0"><div class="ob-widget ob-strip-layout AR_17" data-dynamic-truncate="true">
       <span style="position:fixed;top:-200px;">&nbsp;</span>
     <style type="text/css">
