DES-90 heroic template updates

--- a/test/fixture/article-tone-heroic.html
+++ b/test/fixture/article-tone-heroic.html
@@ -45,7 +45,7 @@
                         <div class="article__header__headline__container">
                             <div class="article__header__headline__container__content">
                                 <h1>
-                                Peter is one of 80 Labour councillors on the 90-seat Liverpool city council, where he is the mayoral lead on parks and open spaces.
+                                Labour &amp; Liverpool: 'the project is off to a good start'
                                 </h1>
                             </div>
                         </div>
