adding Liveblog template placeholder for contributions epic

--- a/ArticleTemplates/liveblogTemplate.html
+++ b/ArticleTemplates/liveblogTemplate.html
@@ -149,6 +149,8 @@
             <img src="__TEMPLATES_DIRECTORY__assets/img/loading.gif" alt="Loading…"/>
         </div>
 
+        __CONTRIBUTIONS_EPIC__
+
         <div class="tags">
             <ul class="inline-list">
                 <li class="inline-list__item screen-readable">Tags:</li>
